Added analyzer with ollama integration

--- a/nutrition_insights/.env
+++ b/nutrition_insights/.env
@@ -1,4 +1,3 @@
-# ====== CONFIG ======
-CLIENT_ID = "frUhUqOJkJTZrnhQvtlV_w"
-CLIENT_SECRET = "feaKgAXQ2hIWh7AfIi67SO5FpFCSyg"
-USER_AGENT = "protein_scrapper"
+REDDIT_CLIENT_ID=frUhUqOJkJTZrnhQvtlV_w
+REDDIT_CLIENT_SECRET=feaKgAXQ2hIWh7AfIi67SO5FpFCSyg
+REDDIT_USER_AGENT=protein_scrapper
